header section overlap correction

--- a/style.css
+++ b/style.css
@@ -53,14 +53,14 @@ nav {
 }
 
 .container2 {
+  display: flex;
+  flex-direction: column;
   margin-top: 114px;
   position: relative;
 }
 
 .hero-text h2 {
   margin-bottom: 12px;
-  height: 150px;
-  font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
